--- a/src/main/resources/views/accountDetails.fxml
+++ b/src/main/resources/views/accountDetails.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -8,20 +9,27 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.Settings.AccountDetails.AccountDetailsController"
-            prefWidth="360" prefHeight="640" style="-fx-background-color: #F0F2F5;" stylesheets="@../styles/style.css">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.client.Settings.AccountDetails.AccountDetailsController"
+            prefWidth="360" prefHeight="640"
+            minWidth="360" minHeight="640"
+            maxWidth="360" maxHeight="640"
+            style="-fx-background-color: #F0F2F5;"
+            stylesheets="@../styles/style.css">
 
     <!-- Top Bar (Messenger Style) -->
     <HBox prefHeight="56" prefWidth="360"
           style="-fx-background-color: #0084FF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 0, 2);"
           AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
           alignment="CENTER_LEFT" spacing="16" stylesheets="@../styles/style.css">
-        <javafx.scene.control.Button fx:id="backButton" style="-fx-background-color: transparent;" >
+        <Button fx:id="backButton"
+                onAction="#handleBack"
+                style="-fx-background-color: transparent;">
             <graphic>
                 <javafx.scene.shape.SVGPath content="M 16 0 L 0 12 L 16 24"
                                             style="-fx-fill: white; -fx-scale-x: 1.2; -fx-scale-y: 1.2;" />
             </graphic>
-        </javafx.scene.control.Button>
+        </Button>
         <Label text="Edit Profile"
                style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;" />
     </HBox>
@@ -36,8 +44,8 @@
                     <Circle radius="50" centerX="50" centerY="50" />
                 </clip>
             </ImageView>
-            <javafx.scene.control.Button fx:id="changePhotoButton" text="Change Photo"
-                                         style="-fx-background-color: transparent; -fx-text-fill: #0084FF; -fx-font-weight: bold;" />
+            <Button fx:id="changePhotoButton" text="Change Photo"
+                    style="-fx-background-color: transparent; -fx-text-fill: #0084FF; -fx-font-weight: bold;" />
         </VBox>
 
         <!-- Username Field -->
@@ -63,11 +71,14 @@
 
         <!-- Action Buttons -->
         <HBox spacing="10" alignment="CENTER_RIGHT" stylesheets="@../styles/style.css">
-            <javafx.scene.control.Button fx:id="saveButton" text="Save"
-                                         style="-fx-background-color: #0084FF; -fx-text-fill: white; -fx-background-radius: 8; -fx-padding: 8 16;" />
+            <Button fx:id="saveButton" text="Save"
+                    style="-fx-background-color: #0084FF; -fx-text-fill: white; -fx-background-radius: 8; -fx-padding: 8 16;" />
         </HBox>
     </VBox>
 
 </AnchorPane>
+
+
+
 
 
