--- a/client/src/main/resources/views/chat.fxml
+++ b/client/src/main/resources/views/chat.fxml
@@ -9,10 +9,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.client.chat.ChatController">
    <children>
       <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="610.0" prefWidth="347.0" styleClass="contact-list">
          <children>
@@ -142,5 +143,20 @@
             </VBox>
          </content>
       </ScrollPane>
+      <Button fx:id="settingsButton"
+              onAction="#onSettingsClicked"
+              styleClass="settings-icon-btn"
+              AnchorPane.bottomAnchor="15.0"
+              AnchorPane.leftAnchor="15.0"
+              prefWidth="40.0"
+              prefHeight="40.0">
+         <graphic>
+            <ImageView fitWidth="30.0" fitHeight="30.0">
+               <image>
+                  <Image url="@../icons/gear_8.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
