--- a/client/src/main/resources/views/accountDetails.fxml
+++ b/client/src/main/resources/views/accountDetails.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
+<?import javafx.scene.layout.StackPane?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.client.Settings.AccountDetails.AccountDetailsController"
             prefWidth="360" prefHeight="640"
@@ -39,13 +40,26 @@
           style="-fx-padding: 16;" stylesheets="@../styles/style.css">
         <!-- Profile Picture & Change Photo -->
         <VBox alignment="CENTER" spacing="12">
-            <ImageView fx:id="profileImageView" fitWidth="100" fitHeight="100" preserveRatio="true">
-                <clip>
-                    <Circle radius="50" centerX="50" centerY="50" />
-                </clip>
-            </ImageView>
+            <StackPane>
+                <!-- Outer circle as border -->
+                <Circle fx:id="borderCircle" radius="52"
+                        style="-fx-fill: transparent;
+                   -fx-stroke: #0084FF;
+                   -fx-stroke-width: 4;" />
+                <!-- Your image, clipped to 50px radius -->
+                <ImageView fx:id="profileImageView"
+                           fitWidth="100" fitHeight="100"
+                           preserveRatio="true">
+                    <clip>
+                        <Circle fx:id="clipCircle"/>
+                    </clip>
+                </ImageView>
+            </StackPane>
+
             <Button fx:id="changePhotoButton" text="Change Photo"
-                    style="-fx-background-color: transparent; -fx-text-fill: #0084FF; -fx-font-weight: bold;" />
+                    style="-fx-background-color: transparent;
+                 -fx-text-fill: #0084FF;
+                 -fx-font-weight: bold;" />
         </VBox>
 
         <!-- Username Field -->
