--- a/client/src/main/resources/views/chat.fxml
+++ b/client/src/main/resources/views/chat.fxml
@@ -12,21 +12,58 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.Cursor?>
+
+
+
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.client.chat.ChatController">
    <children>
       <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="610.0" prefWidth="347.0" styleClass="contact-list">
          <children>
-            <HBox alignment="CENTER" prefHeight="57.0" prefWidth="342.0" style="-fx-spacing: 5;" styleClass="accent-color">
+
+            <HBox alignment="CENTER" prefHeight="57.0" prefWidth="342.0"
+                  style="-fx-spacing: 5;" styleClass="accent-color">
                <children>
-                  <ImageView fitHeight="27.0" fitWidth="27.0" style="-fx-opacity: 0.5;">
+                  <!-- Search icon -->
+                  <ImageView fx:id="searchIcon"
+                             fitHeight="27.0" fitWidth="27.0"
+                             style="-fx-opacity: 0.5;"
+                             onMouseClicked="#onSearchClicked">
                      <image>
-                        <Image url="@../icons/icons8-search-40.png" />
+                        <Image url="@../icons/icons8-search-40.png"/>
                      </image>
                   </ImageView>
-                  <TextField prefHeight="46.0" prefWidth="283.0" promptText="Search Contact" styleClass="search-input" />
+
+                  <!-- Editable, focusable search field -->
+                  <TextField fx:id="searchField"
+                             prefHeight="46.0" prefWidth="250.0"
+                             promptText="Search Contact (e.g. 017XXXXXXXXX"
+                             editable="true"
+                             focusTraversable="false"
+                             onAction="#onSearchClicked"
+                             style="-fx-text-fill: black;"/>
+
+                  <!-- Clear icon (“×”), show/hide in controller -->
+                  <ImageView fx:id="clearSearch"
+                             pickOnBounds="true"
+                             fitHeight="35.0"
+                             fitWidth="35.0"
+                             onMouseClicked="#onClearSearchClicked"
+                             style="-fx-translate-x: -40px;">
+                     <cursor>
+                        <Cursor fx:constant="HAND"/>
+                     </cursor>
+                     <image>
+                        <Image url="@../icons/icons8-cancel-50.png"/>
+                     </image>
+                  </ImageView>
+
                </children>
             </HBox>
+
+
+
             <ScrollPane prefHeight="541.0" prefWidth="342.0">
                <content>
                   <VBox prefHeight="531.0" prefWidth="337.0">
@@ -120,14 +157,34 @@
                   </Label>
                </children>
             </HBox>
-            <ImageView>
-               <image>
-                  <Image url="@../icons/icons8-dots-30.png" />
-               </image>
+            <Button fx:id="dotsButton"
+                    onAction="#onDotsClicked"
+                    styleClass="dots-btn"
+                    prefWidth="40.0"
+                    prefHeight="40.0">
+               <graphic>
+                  <ImageView fitHeight="30.0" fitWidth="30.0">
+                     <image>
+                        <Image url="@../icons/icons8-dots-30.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                <HBox.margin>
                   <Insets left="400.0" />
                </HBox.margin>
-            </ImageView>
+            </Button>
+            <Button fx:id="blockUserButton"
+                    text="Block User"
+                    visible="false"
+                    onAction="#onBlockUserClicked"
+                    styleClass="block-user-btn"
+                    prefWidth="0"
+                    prefHeight="0"
+                    layoutX="0"
+
+                    layoutY="0"/>
+
+
          </children>
       </HBox>
       <ScrollPane layoutX="344.0" layoutY="59.0" prefHeight="486.0" prefWidth="656.0">
