--- a/client/src/main/resources/views/chat.fxml
+++ b/client/src/main/resources/views/chat.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -9,53 +11,33 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.Cursor?>
 
-
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.client.chat.ChatController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.chat.ChatController">
    <children>
       <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="610.0" prefWidth="347.0" styleClass="contact-list">
          <children>
 
-            <HBox alignment="CENTER" prefHeight="57.0" prefWidth="342.0"
-                  style="-fx-spacing: 5;" styleClass="accent-color">
+            <HBox alignment="CENTER" prefHeight="57.0" prefWidth="342.0" style="-fx-spacing: 5;" styleClass="accent-color">
                <children>
                   <!-- Search icon -->
-                  <ImageView fx:id="searchIcon"
-                             fitHeight="27.0" fitWidth="27.0"
-                             style="-fx-opacity: 0.5;"
-                             onMouseClicked="#onSearchClicked">
+                  <ImageView fx:id="searchIcon" fitHeight="27.0" fitWidth="27.0" onMouseClicked="#onSearchClicked" style="-fx-opacity: 0.5;">
                      <image>
-                        <Image url="@../icons/icons8-search-40.png"/>
+                        <Image url="@../icons/icons8-search-40.png" />
                      </image>
                   </ImageView>
 
                   <!-- Editable, focusable search field -->
-                  <TextField fx:id="searchField"
-                             prefHeight="46.0" prefWidth="250.0"
-                             promptText="Search Contact"
-                             editable="true"
-                             focusTraversable="true"
-                             onAction="#onSearchClicked"
-                             style="-fx-text-fill: black;"/>
+                  <TextField fx:id="searchField" editable="true" focusTraversable="true" onAction="#onSearchClicked" prefHeight="46.0" prefWidth="250.0" promptText="Search Contact" style="-fx-text-fill: black;" />
 
                   <!-- Clear icon (“×”), show/hide in controller -->
-                  <ImageView fx:id="clearSearch"
-                             pickOnBounds="true"
-                             fitHeight="35.0"
-                             fitWidth="35.0"
-                             onMouseClicked="#onClearSearchClicked"
-                             style="-fx-translate-x: -40px;">
+                  <ImageView fx:id="clearSearch" fitHeight="35.0" fitWidth="35.0" onMouseClicked="#onClearSearchClicked" pickOnBounds="true" style="-fx-translate-x: -40px;">
                      <cursor>
-                        <Cursor fx:constant="HAND"/>
+                        <Cursor fx:constant="HAND" />
                      </cursor>
                      <image>
-                        <Image url="@../icons/icons8-cancel-50.png"/>
+                        <Image url="@../icons/icons8-cancel-50.png" />
                      </image>
                   </ImageView>
 
@@ -66,7 +48,7 @@
 
             <ScrollPane prefHeight="541.0" prefWidth="342.0">
                <content>
-                  <VBox prefHeight="531.0" prefWidth="337.0">
+                  <VBox fx:id="chatList" prefHeight="531.0" prefWidth="337.0">
                      <children>
                         <HBox alignment="CENTER" prefHeight="72.0" prefWidth="334.0">
                            <children>
@@ -180,17 +162,11 @@
             </VBox>
          </content>
       </ScrollPane>
-      <Button fx:id="settingsButton"
-              onAction="#onSettingsClicked"
-              styleClass="settings-icon-btn"
-              AnchorPane.bottomAnchor="15.0"
-              AnchorPane.leftAnchor="15.0"
-              prefWidth="40.0"
-              prefHeight="40.0">
+      <Button fx:id="settingsButton" onAction="#onSettingsClicked" prefHeight="40.0" prefWidth="40.0" styleClass="settings-icon-btn" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
          <graphic>
-            <ImageView fitWidth="30.0" fitHeight="30.0">
+            <ImageView fitHeight="30.0" fitWidth="30.0">
                <image>
-                  <Image url="@../icons/gear_8.png"/>
+                  <Image url="@../icons/gear_8.png" />
                </image>
             </ImageView>
          </graphic>
