--- a/client/src/main/resources/views/blockUser.fxml
+++ b/client/src/main/resources/views/blockUser.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.client.blockPeople.blockController"
-            prefWidth="1000" prefHeight="600">
+            prefWidth="1000" prefHeight="600" stylesheets="@../styles/style.css">
 
     <children>
         <VBox alignment="CENTER" spacing="20"
@@ -45,4 +45,5 @@
             </padding>
         </VBox>
     </children>
+    <Button fx:id="ChatBackBtn" layoutX="54.0" layoutY="31.0" mnemonicParsing="false" onAction="#ChatBackHandler" styleClass="login-btn" text="&lt;- Back" />
 </AnchorPane>
