--- a/client/src/main/resources/views/chat.fxml
+++ b/client/src/main/resources/views/chat.fxml
@@ -14,12 +14,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.Cursor?>
 
-
-
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.client.chat.ChatController">
    <children>
-      <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="610.0" prefWidth="347.0" styleClass="contact-list">
+      <!-- Contacts pane -->
+      <VBox fx:id="contactsBox" layoutX="-4.0" layoutY="-2.0" prefHeight="610.0" prefWidth="347.0" styleClass="contact-list">
          <children>
 
             <HBox alignment="CENTER" prefHeight="57.0" prefWidth="342.0"
@@ -62,84 +60,31 @@
                </children>
             </HBox>
 
-
-
             <ScrollPane prefHeight="541.0" prefWidth="342.0">
                <content>
-                  <VBox prefHeight="531.0" prefWidth="337.0">
-                     <children>
-                        <HBox alignment="CENTER" prefHeight="72.0" prefWidth="334.0">
-                           <children>
-                              <ImageView fitHeight="50.0" fitWidth="55.0">
-                                 <image>
-                                    <Image url="@../icons/icons8-avatar-80.png" />
-                                 </image>
-                              </ImageView>
-                              <VBox prefHeight="100.0" prefWidth="231.0">
-                                 <children>
-                                    <Label alignment="CENTER" prefHeight="35.0" prefWidth="131.0" text="Tafsif Al nafin">
-                                       <font>
-                                          <Font name="System Bold" size="16.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets top="8.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label alignment="TOP_LEFT" prefHeight="18.0" prefWidth="227.0" text="Latest message">
-                                       <padding>
-                                          <Insets left="15.0" />
-                                       </padding>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                        <Separator prefWidth="200.0" />
-                        <HBox alignment="CENTER" prefHeight="72.0" prefWidth="334.0">
-                           <children>
-                              <ImageView fitHeight="50.0" fitWidth="55.0">
-                                 <image>
-                                    <Image url="@../icons/icons8-avatar-80.png" />
-                                 </image>
-                              </ImageView>
-                              <VBox prefHeight="100.0" prefWidth="231.0">
-                                 <children>
-                                    <Label alignment="CENTER" prefHeight="35.0" prefWidth="131.0" text="Hasibul Hasan">
-                                       <font>
-                                          <Font name="System Bold" size="16.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets top="8.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label alignment="TOP_LEFT" prefHeight="18.0" prefWidth="227.0" text="Latest message">
-                                       <padding>
-                                          <Insets left="15.0" />
-                                       </padding>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </children>
+                  <!-- Dynamic chat list -->
+                  <VBox fx:id="chatList" prefHeight="531.0" prefWidth="337.0">
+                     <!-- Entries will be populated dynamically -->
                   </VBox>
                </content>
             </ScrollPane>
          </children>
       </VBox>
+
+      <!-- Message input bar -->
       <HBox alignment="CENTER" layoutX="341.0" layoutY="545.0" prefHeight="58.0" prefWidth="662.0" style="-fx-background-color: #3b4ef7; -fx-spacing: 30;">
          <children>
-            <ImageView fitHeight="35.0" fitWidth="35.0" styleClass="send-btn">
+            <ImageView fx:id="sendIcon" fitHeight="35.0" fitWidth="35.0" styleClass="send-btn">
                <image>
                   <Image url="@../icons/icons8-photo-30.png" />
                </image>
             </ImageView>
             <TextField fx:id="messageField"
-                        prefHeight="37.0"
-                        prefWidth="457.0"
-                        promptText="Write here..."
-                        style="-fx-background-color: #596bf6;"
-                        styleClass="search-input" />
+                       prefHeight="37.0"
+                       prefWidth="457.0"
+                       promptText="Write here..."
+                       style="-fx-background-color: #596bf6;"
+                       styleClass="search-input" />
 
             <Button fx:id="sendButton"
                     onAction="#onSendClicked"
@@ -156,16 +101,18 @@
             </Button>
 
          </children></HBox>
+
+      <!-- Header bar -->
       <HBox alignment="CENTER_LEFT" layoutX="343.0" prefHeight="58.0" prefWidth="662.0" style="-fx-background-color: #3b4ef7;">
          <children>
             <HBox alignment="CENTER" prefHeight="58.0" prefWidth="212.0">
                <children>
-                  <ImageView fitHeight="34.0" fitWidth="37.0">
+                  <ImageView fx:id="headerAvatar" fitHeight="34.0" fitWidth="37.0">
                      <image>
                         <Image url="@../icons/icons8-avatar-80.png" />
                      </image>
                   </ImageView>
-                  <Label alignment="CENTER" prefHeight="25.0" prefWidth="131.0" text="Tafsif Al nafin" textFill="WHITE">
+                  <Label fx:id="headerNameLabel" alignment="CENTER" prefHeight="25.0" prefWidth="131.0" text="Tafsif Al nafin" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -196,25 +143,20 @@
                     prefWidth="0"
                     prefHeight="0"
                     layoutX="0"
-
                     layoutY="0"/>
-
 
          </children>
       </HBox>
-      <ScrollPane layoutX="344.0" layoutY="59.0" prefHeight="486.0" prefWidth="656.0">
+
+      <!-- Messages view -->
+      <ScrollPane fx:id="messageScrollPane" layoutX="344.0" layoutY="59.0" prefHeight="486.0" prefWidth="656.0">
          <content>
-            <VBox alignment="BOTTOM_RIGHT" prefHeight="483.0" prefWidth="646.0">
-               <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="318.0" styleClass="message" text="Label">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-               </children>
+            <VBox fx:id="messageContainer" alignment="BOTTOM_RIGHT" prefHeight="483.0" prefWidth="646.0">
+               <!-- Bubbles added here -->
             </VBox>
          </content>
       </ScrollPane>
+
       <Button fx:id="settingsButton"
               onAction="#onSettingsClicked"
               styleClass="settings-icon-btn"
